# screencapturekit-rs

./: Cargo.toml
screencapturekit/: Cargo.toml
screencapturekit-sys/src/: sc_stream_frame_info.rs  stream.rs
screencapturekit/src/: cm_sample_buffer.rs  lib.rs  sc_screenshot_manager.rs  sc_stream.rs  sc_window.rs
src/shareable_content/: mod.rs  sc_display.rs  sc_shareable_content.rs
src/stream/: mod.rs  sc_stream_configuration.rs  screenshot_manager.rs
src/stream/configuration/: captured_frames.rs  mod.rs
src/stream/internal/: sc_stream.rs
